--- a/home/index.html
+++ b/home/index.html
@@ -8,22 +8,24 @@
 </head>
 <body>
   <header>
-    <div class="logo-container">
-      <img src="imagens/logo.png" alt="Logo da Loja" class="logo" />
-      <h1>Loja de Pijamas</h1>
-    </div>
+  <div class="header-inner">
+    <div class="logo">Logo</div>
     <nav>
-      <a href="#">Home</a>
+      <a href="#">Início</a>
       <a href="#">Catálogo</a>
+      <a href="#">Serviços</a>
+      <a href="#">Sobre</a>
     </nav>
-  </header>
+  </div>
+</header>
+
 
   <main>
     <section class="catalogo">
       <h2>Destaques</h2>
       <div class="carousel-destaques">
         <div class="carousel-item active">
-          <img src="imagens/p1.jpg" alt="Pijama Estrela" />
+          <img src="imagens/pose 3.png" alt="Pijama Estrela" />
           <div class="caption">
             <h3>Pijama Estrela</h3>
             <p>Conforto e estilo para suas noites.</p>
@@ -31,7 +33,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img src="imagens/p2.jpg" alt="Pijama Fluffy" />
+          <img src="imagens/pose 4.png" alt="Pijama Fluffy" />
           <div class="caption">
             <h3>Pijama Fluffy</h3>
             <p>Toque macio e quentinho para o inverno.</p>
@@ -39,7 +41,15 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img src="imagens/p3.jpg" alt="Pijama Floral" />
+          <img src="imagens/pose 5.png" alt="Pijama Floral" />
+          <div class="caption">
+            <h3>Pijama Floral</h3>
+            <p>Estampa delicada e confortável.</p>
+            <button>Ver Produto</button>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="imagens/pose 6.png" alt="Pijama Floral" />
           <div class="caption">
             <h3>Pijama Floral</h3>
             <p>Estampa delicada e confortável.</p>
@@ -50,38 +60,24 @@
     </section>
 
     <!-- Promoções - carrossel 3 por vez -->
-    <section class="promocao">
-  <h2>Promoções</h2>
-  <div class="promocao-linha">
-    <div class="item">
-      <img src="imagens/d1.jpg" alt="Pijama 1">
-      <h3>Pijama Estrela</h3>
-      <button>Encomende</button>
-    </div>
-    <div class="item">
-      <img src="imagens/d2.jpg" alt="Pijama 2">
-      <h3>Pijama Fluffy</h3>
-      <button>Encomende</button>
-    </div>
-    <div class="item">
-      <img src="imagens/d3.jpg" alt="Pijama 3">
-      <h3>Pijama Floral</h3>
-      <button>Encomende</button>
-    </div>
-    <div class="item">
-      <img src="imagens/d4.jpg" alt="Pijama 4">
-      <h3>Pijama Azul</h3>
-      <button>Encomende</button>
-    </div>
-    <div class="item">
-      <img src="imagens/d5.jpg" alt="Pijama 5">
-      <h3>Pijama Rosa</h3>
-      <button>Encomende</button>
-    </div>
-  </div>
-</section>
+    <div class="carrossel-container">
+        <button class="arrow left" onclick="scrollCarrossel('carrossel1', -1)">&#8249;</button>
+        <div class="carrossel" id="carrossel1">
+          <div class="produto"><img src="imagens/d1.jpg"><p>Compre por WhatsApp</p></div>
+          <div class="produto"><img src="imagens/d2.jpg"><p>Compre por WhatsApp</p></div>
+          <div class="produto"><img src="imagens/d3.jpg"><p>Compre por WhatsApp</p></div>
+          <div class="produto"><img src="imagens/d4.jpg"><p>Compre por WhatsApp</p></div>
+          <div class="produto"><img src="imagens/d5.jpg"><p>Compre por WhatsApp</p></div>
+          <div class="produto"><img src="imagens/d6.jpg"><p>Compre por WhatsApp</p></div>
+        </div>
+        <button class="arrow right" onclick="scrollCarrossel('carrossel1', 1)">&#8250;</button>
+      </div>
 
-
+      <!--- Destaques -->
+      <div class="destaques">
+        <div class="produto"></div><img src="imagens/pose 1.png"></div>
+        <div class="produto"></div><img src="imagens/pose 2.png"></div>
+      </div>
     <!-- Serviços -->
     <section class="catalogo">
       <h2>Serviços</h2>
@@ -110,17 +106,7 @@
       </div>
     </section>
 
-    <!-- Contato -->
-    <section class="contato">
-      <h2>Contato</h2>
-      <form>
-        <input type="text" placeholder="Nome" required />
-        <input type="email" placeholder="Email" required />
-        <textarea placeholder="Mensagem" rows="5" required></textarea>
-        <button type="submit">Enviar</button>
-      </form>
-    </section>
-  </main>
+    
 
   <footer>
     &copy; 2025 Loja de Pijamas - Todos os direitos reservados.
