--- a/home/Inicio.html
+++ b/home/Inicio.html
@@ -8,12 +8,13 @@
 </head>
 <body>
   <header>
-  <div class="header-inner">
-    <div class="logo">Logo</div>
+ <div class="header-inner">
+  <div class="logo">  
+    <img src="imagens/logo.png" alt="Logo">
+ </div>
     <nav>
       <a href="#">Início</a>
       <a href="#">Catálogo</a>
-      <a href="#">Serviços</a>
       <a href="#">Sobre</a>
     </nav>
   </div>
@@ -108,9 +109,23 @@
 
     
 
-  <footer>
-    &copy; 2025 Loja de Pijamas - Todos os direitos reservados.
-  </footer>
+
+<footer class="footer">
+  <div class="footer-left">
+    <div class="site-name">NK Pijamas</div>
+    <div class="social-icons">
+      <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/25/25694.png" alt="icon" /></a>
+      <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/1384/1384031.png" alt="icon" /></a>
+    </div>
+  </div>
+  <div class="footer-right">
+    <nav>
+      <a href="#">Início</a>
+      <a href="#">Catálogo</a>
+      <a href="#">Sobre</a>
+    </nav>
+  </div>
+</footer>
 
   <script src="script.js"></script>
 </body>
