--- a/home/Inicio.html
+++ b/home/Inicio.html
@@ -114,8 +114,8 @@
   <div class="footer-left">
     <div class="site-name">NK Pijamas</div>
     <div class="social-icons">
-      <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/25/25694.png" alt="icon" /></a>
-      <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/1384/1384031.png" alt="icon" /></a>
+      <a href="#"><img src="imagens/zap.jpg" alt="icon" /></a>
+      <a href="#"><img src="imagens/insta.webp" alt="icon" /></a>
     </div>
   </div>
   <div class="footer-right">
