--- a/home/Inicio.html
+++ b/home/Inicio.html
@@ -64,12 +64,12 @@
     <div class="carrossel-container">
         <button class="arrow left" onclick="scrollCarrossel('carrossel1', -1)">&#8249;</button>
         <div class="carrossel" id="carrossel1">
-          <div class="produto"><img src="imagens/d1.jpg"><p>Compre por WhatsApp</p></div>
-          <div class="produto"><img src="imagens/d2.jpg"><p>Compre por WhatsApp</p></div>
-          <div class="produto"><img src="imagens/d3.jpg"><p>Compre por WhatsApp</p></div>
-          <div class="produto"><img src="imagens/d4.jpg"><p>Compre por WhatsApp</p></div>
-          <div class="produto"><img src="imagens/d5.jpg"><p>Compre por WhatsApp</p></div>
-          <div class="produto"><img src="imagens/d6.jpg"><p>Compre por WhatsApp</p></div>
+          <div class="produto"><img src="imagens/d1.jpg"><h3>Produto 1</h3><p>Descrição do produto</p><p><strong>R$ 49,90</strong></p></div>
+          <div class="produto"><img src="imagens/d2.jpg"><h3>Produto 2</h3><p>Descrição do produto</p><p><strong>R$ 54,90</strong></p></div>
+          <div class="produto"><img src="imagens/d3.png"><h3>Produto 3</h3><p>Descrição do produto</p><p><strong>R$ 59,90</strong></p></div>
+          <div class="produto"><img src="imagens/d4.png"><h3>Produto 4</h3><p>Descrição do produto</p><p><strong>R$ 60,00</strong></p></div>
+          <div class="produto"><img src="imagens/d5.jpg"><h3>Produto 4</h3><p>Descrição do produto</p><p><strong>R$ 60,00</strong></p></div>
+          <div class="produto"><img src="imagens/d6.png"><h3>Produto 4</h3><p>Descrição do produto</p><p><strong>R$ 60,00</strong></p></div>
         </div>
         <button class="arrow right" onclick="scrollCarrossel('carrossel1', 1)">&#8250;</button>
       </div>
