--- a/Catalogo.html
+++ b/Catalogo.html
@@ -36,7 +36,7 @@
 
 
       <!-- Carrossel 1 -->
-      <div class="carrossel-container">
+      <div class="carrossel-pro2">
         <button class="arrow left" onclick="scrollCarrossel('carrossel1', -1)">&#8249;</button>
         <div class="carrossel" id="carrossel1">
           <div class="produto"><img src="imagens/d1.jpg"><h3>Produto 1</h3><p>Descrição do produto</p><p><strong>R$ 49,90</strong></p></div>
@@ -54,7 +54,7 @@
       </div>
 
       <!-- Carrossel 2 -->
-      <div class="carrossel-container">
+      <div class="carrossel-pro2">
         <button class="arrow left" onclick="scrollCarrossel('carrossel2', -1)">&#8249;</button>
         <div class="carrossel" id="carrossel2">
           <div class="produto"><img src="imagens/d1.jpg"><h3>Produto 1</h3><p>Descrição do produto</p><p><strong>R$ 49,90</strong></p></div>
@@ -87,6 +87,6 @@
 </footer>
 
 
-  <script src="script.js"></script>
+  <script src="Catalogo.js"></script>
 </body>
 </html>
