--- a/Home.html
+++ b/Home.html
@@ -22,7 +22,7 @@
 
 
   <main>
-    <section class="catalogo">
+    <section class="pro1">
       <h2>Destaques</h2>
       <div class="carousel-destaques">
         <div class="carousel-item active">
@@ -61,7 +61,7 @@
     </section>
 
     <!-- Promoções - carrossel 3 por vez -->
-    <div class="carrossel-container">
+    <div class="carrossel-pro2">
         <button class="arrow left" onclick="scrollCarrossel('carrossel1', -1)">&#8249;</button>
         <div class="carrossel" id="carrossel1">
           <div class="produto"><img src="imagens/d1.jpg"><h3>Produto 1</h3><p>Descrição do produto</p><p><strong>R$ 49,90</strong></p></div>
@@ -127,6 +127,6 @@
   </div>
 </footer>
 
-  <script src="script.js"></script>
+  <script src="Home.js"></script>
 </body>
 </html>
