--- a/Home.html
+++ b/Home.html
@@ -23,7 +23,7 @@
 
   <main>
     <section class="pro1">
-      <h2>Destaques</h2>
+      <h2>NIKA Pikmas</h2>
       <div class="carousel-destaques">
         <div class="carousel-item active">
           <img src="imagens/pose 3.png" alt="Pijama Estrela" />
@@ -62,6 +62,7 @@
 
     <!-- Promoções - carrossel 3 por vez -->
     <div class="carrossel-pro2">
+      <h2>Promoções</h2>
         <button class="arrow left" onclick="scrollCarrossel('carrossel1', -1)">&#8249;</button>
         <div class="carrossel" id="carrossel1">
           <div class="produto"><img src="imagens/d1.jpg"><h3>Produto 1</h3><p>Descrição do produto</p><p><strong>R$ 49,90</strong></p></div>
@@ -74,30 +75,40 @@
         <button class="arrow right" onclick="scrollCarrossel('carrossel1', 1)">&#8250;</button>
       </div>
 
-      <!--- Destaques -->
-      <div class="destaques">
-        <div class="produto"></div><img src="imagens/pose 1.png"></div>
-        <div class="produto"></div><img src="imagens/pose 2.png"></div>
-      </div>
+     <!-- Destaques -->
+
+     <h2>Combos Familia</h2>
+<div class="destaques">
+  
+  <div class="d1">
+    <img src="imagens/pose 1.png" alt="Pijama mãe e filha">
+  </div>
+  <div class="d1">  
+    <img src="imagens/pose 2.png" alt="Pijama pai e filho">
+  </div>
+</div>
+
+
+      
     <!-- Serviços -->
-    <section class="catalogo">
+    <section class="servicos">
       <h2>Serviços</h2>
-      <div class="lista-carousel">
-        <div class="carousel-item">
+      <div class="servicos-container">
+        <div class="servico-item">
           <img src="imagens/entrega.png" alt="Cliente 1" />
           <div class="caption">
             <h3>Entrega</h3>
             <p>Frete gratis para toda Maringá</p>
           </div>
         </div>
-        <div class="carousel-item">
+        <div class="servico-item">
           <img src="imagens/pagamento.jpg" alt="Cliente 2" />
           <div class="caption">
             <h3>Pagamento</h3>
             <p>Pagamento até 5 vezes sem juros</p>
           </div>
         </div>
-        <div class="carousel-item">
+        <div class="servico-item">
           <img src="imagens/negocio.png" alt="Cliente 3" />
           <div class="caption">
             <h3>Negócio</h3>
