--- a/Home.html
+++ b/Home.html
@@ -7,23 +7,28 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
- <div class="header-inner">
-  <div class="logo">  
-    <img src="imagens/logo.png" alt="Logo">
- </div>
-    <nav>
-      <a href="#">Início</a>
-      <a href="#">Catálogo</a>
-      <a href="#">Sobre</a>
+ <header>
+  <div class="header-inner">
+    <div class="logo">  
+      <a href="Home.html">
+        <img src="imagens/logo.png" alt="Logo">
+      </a>
+    </div>
+
+    <nav class="menu">
+      <a href="Home.html">Início</a>
+      <a href="Catalogo.html">Catálogo</a>
+      <a href="sobre.html">Sobre</a>
     </nav>
+
+    <div class="menu-toggle" onclick="toggleMenu()">☰</div>
   </div>
 </header>
 
 
   <main>
     <section class="pro1">
-      <h2>NIKA Pikmas</h2>
+      <h2>NIKA Pijamas</h2>
       <div class="carousel-destaques">
         <div class="carousel-item active">
           <img src="imagens/pose 3.png" alt="Pijama Estrela" />
@@ -65,12 +70,12 @@
       <h2>Promoções</h2>
         <button class="arrow left" onclick="scrollCarrossel('carrossel1', -1)">&#8249;</button>
         <div class="carrossel" id="carrossel1">
-          <div class="produto"><img src="imagens/d1.jpg"><h3>Produto 1</h3><p>Descrição do produto</p><p><strong>R$ 49,90</strong></p></div>
-          <div class="produto"><img src="imagens/d2.jpg"><h3>Produto 2</h3><p>Descrição do produto</p><p><strong>R$ 54,90</strong></p></div>
-          <div class="produto"><img src="imagens/d3.png"><h3>Produto 3</h3><p>Descrição do produto</p><p><strong>R$ 59,90</strong></p></div>
-          <div class="produto"><img src="imagens/d4.png"><h3>Produto 4</h3><p>Descrição do produto</p><p><strong>R$ 60,00</strong></p></div>
-          <div class="produto"><img src="imagens/d5.jpg"><h3>Produto 4</h3><p>Descrição do produto</p><p><strong>R$ 60,00</strong></p></div>
-          <div class="produto"><img src="imagens/d6.png"><h3>Produto 4</h3><p>Descrição do produto</p><p><strong>R$ 60,00</strong></p></div>
+          <div class="produto"><img src="imagens/d1.jpg"><h3>Doce Sonho</h3></div>
+          <div class="produto"><img src="imagens/d2.jpg"><h3>Nuvem de Algodão</h3></div>
+          <div class="produto"><img src="imagens/d3.png"><h3>Encanto Floral</h3></div>
+          <div class="produto"><img src="imagens/d4.png"><h3>Café & Conforto</h3></div>
+          <div class="produto"><img src="imagens/d5.jpg"><h3>Luar Rosé</h3></p></div>
+          <div class="produto"><img src="imagens/d6.png"><h3>Estrela da Noite</h3></p></div>
         </div>
         <button class="arrow right" onclick="scrollCarrossel('carrossel1', 1)">&#8250;</button>
       </div>
@@ -125,15 +130,18 @@
   <div class="footer-left">
     <div class="site-name">NK Pijamas</div>
     <div class="social-icons">
-      <a href="#"><img src="imagens/zap.jpg" alt="icon" /></a>
-      <a href="#"><img src="imagens/insta.webp" alt="icon" /></a>
+      <a href="https://wa.me/5599999999999">
+        <img src="imagens/zap.jpg" alt="icon">
+      </a>
+      <a href="https://www.instagram.com/moda_feminina_nk?igsh=bzZuNDJxaDVzYm5r">
+        <img src="imagens/insta.webp" alt="icon">
     </div>
   </div>
   <div class="footer-right">
-    <nav>
-      <a href="#">Início</a>
-      <a href="#">Catálogo</a>
-      <a href="#">Sobre</a>
+    <nav class="menu">
+      <a href="Home.html">Início</a>
+      <a href="Catalogo.html">Catálogo</a>
+      <a href="sobre.html">Sobre</a>
     </nav>
   </div>
 </footer>
