--- a/Home.html
+++ b/Home.html
@@ -130,7 +130,7 @@
   <div class="footer-left">
     <div class="site-name">NK Pijamas</div>
     <div class="social-icons">
-      <a href="https://wa.me/5599999999999">
+      <a href="https://wa.me/5599999999999  ">
         <img src="imagens/zap.jpg" alt="icon">
       </a>
       <a href="https://www.instagram.com/moda_feminina_nk?igsh=bzZuNDJxaDVzYm5r">
@@ -143,6 +143,14 @@
       <a href="Catalogo.html">Catálogo</a>
       <a href="sobre.html">Sobre</a>
     </nav>
+  </div>
+
+ <div class="footer-bottom">
+    <p>
+      NIKA Pijamas | CNPJ: <br>
+      Rua  - Maringá/PR - CEP: 89112-460<br>
+      © Direitos Reservados — <a href="https://www.nikapijamas.com.br">Home.html</a>
+    </p>
   </div>
 </footer>
 
