--- a/Catalogo.html
+++ b/Catalogo.html
@@ -12,10 +12,10 @@
   <div class="logo">  
     <img src="imagens/logo.png" alt="Logo">
  </div>
-    <nav>
-      <a href="#">Início</a>
-      <a href="#">Catálogo</a>
-      <a href="#">Sobre</a>
+    <nav class="menu">
+      <a href="Home.html">Início</a>
+      <a href="Catalogo.html">Catálogo</a>
+      <a href="sobre.html">Sobre</a>
     </nav>
   </div>
 </header>
@@ -24,10 +24,10 @@
   <main>
     <section class="catalogo">
       <div class="titulo">
-        <h2>Pijamas Masculinos</h2>
+        <h2>Pijamas Femininos</h2>
       <div class="whatsapp-group">
         <span>Peça do seu jeito</span>
-          <a class="whatsapp-button" href="https://wa.me/5599999999999" target="_blank">
+          <a class="whatsapp-button" href="https://wa.me/5599999999999?text=Olá,%20 boa%20tarde!%20Gostaria%20de%20encomendar%20um%20pijama" target="_blank">
           <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp">
       Whatsapp
     </a>
@@ -45,24 +45,22 @@
           <div class="produto"><img src="imagens/d4.png"><h3>Produto 4</h3><p>Descrição do produto</p><p><strong>R$ 60,00</strong></p></div>
           <div class="produto"><img src="imagens/d5.jpg"><h3>Produto 4</h3><p>Descrição do produto</p><p><strong>R$ 60,00</strong></p></div>
           <div class="produto"><img src="imagens/d6.png"><h3>Produto 4</h3><p>Descrição do produto</p><p><strong>R$ 60,00</strong></p></div>
+          <div class="produto"><img src="imagens/p1.jpg"><h3>Produto 4</h3><p>Descrição do produto</p><p><strong>R$ 60,00</strong></p></div>
         </div>
         <button class="arrow right" onclick="scrollCarrossel('carrossel1', 1)">&#8250;</button>
       </div>
 
       <div class="titulo-meio">
-        <h2>Pijamas Femininos</h2>
+        <h2>Pijamas Masculinos</h2>
       </div>
 
       <!-- Carrossel 2 -->
       <div class="carrossel-pro2">
         <button class="arrow left" onclick="scrollCarrossel('carrossel2', -1)">&#8249;</button>
         <div class="carrossel" id="carrossel2">
-          <div class="produto"><img src="imagens/d1.jpg"><h3>Produto 1</h3><p>Descrição do produto</p><p><strong>R$ 49,90</strong></p></div>
-          <div class="produto"><img src="imagens/d2.jpg"><h3>Produto 2</h3><p>Descrição do produto</p><p><strong>R$ 54,90</strong></p></div>
-          <div class="produto"><img src="imagens/d3.png"><h3>Produto 3</h3><p>Descrição do produto</p><p><strong>R$ 59,90</strong></p></div>
-          <div class="produto"><img src="imagens/d4.png"><h3>Produto 4</h3><p>Descrição do produto</p><p><strong>R$ 60,00</strong></p></div>
-          <div class="produto"><img src="imagens/d5.jpg"><h3>Produto 4</h3><p>Descrição do produto</p><p><strong>R$ 60,00</strong></p></div>
-          <div class="produto"><img src="imagens/d6.png"><h3>Produto 4</h3><p>Descrição do produto</p><p><strong>R$ 60,00</strong></p></div>
+          <div class="produto"><img src="imagens/p2.jpg"><h3>Produto 1</h3><p>Descrição do produto</p><p><strong>R$ 49,90</strong></p></div>
+          <div class="produto"><img src="imagens/p3.jpg"><h3>Produto 2</h3><p>Descrição do produto</p><p><strong>R$ 54,90</strong></p></div>
+          <div class="produto"><img src="imagens/p4.jpg"><h3>Produto 3</h3><p>Descrição do produto</p><p><strong>R$ 59,90</strong></p></div>
         </div>
         <button class="arrow right" onclick="scrollCarrossel('carrossel2', 1)">&#8250;</button>
       </div>
@@ -83,6 +81,13 @@
       <a href="#">Catálogo</a>
       <a href="#">Sobre</a>
     </nav>
+  </div>
+ <div class="footer-bottom">
+    <p>
+      NIKA Pijamas | CNPJ: <br>
+      Rua  - Maringá/PR - CEP: 89112-460<br>
+      © Direitos Reservados — <a href="https://www.nikapijamas.com.br">Home.html</a>
+    </p>
   </div>
 </footer>
 
