--- a/Catalogo.html
+++ b/Catalogo.html
@@ -24,7 +24,7 @@
   <main>
     <section class="catalogo">
       <div class="titulo">
-        <h2>Pijamas Femininos</h2>
+        <h2>Pijamas de Verão</h2>
       <div class="whatsapp-group">
         <span>Peça do seu jeito</span>
           <a class="whatsapp-button" href="https://wa.me/5599999999999?text=Olá,%20 boa%20tarde!%20Gostaria%20de%20encomendar%20um%20pijama" target="_blank">
@@ -39,28 +39,29 @@
       <div class="carrossel-pro2">
         <button class="arrow left" onclick="scrollCarrossel('carrossel1', -1)">&#8249;</button>
         <div class="carrossel" id="carrossel1">
-          <div class="produto"><img src="imagens/d1.jpg"><h3>Produto 1</h3><p>Descrição do produto</p><p><strong>R$ 49,90</strong></p></div>
-          <div class="produto"><img src="imagens/d2.jpg"><h3>Produto 2</h3><p>Descrição do produto</p><p><strong>R$ 54,90</strong></p></div>
-          <div class="produto"><img src="imagens/d3.png"><h3>Produto 3</h3><p>Descrição do produto</p><p><strong>R$ 59,90</strong></p></div>
-          <div class="produto"><img src="imagens/d4.png"><h3>Produto 4</h3><p>Descrição do produto</p><p><strong>R$ 60,00</strong></p></div>
-          <div class="produto"><img src="imagens/d5.jpg"><h3>Produto 4</h3><p>Descrição do produto</p><p><strong>R$ 60,00</strong></p></div>
-          <div class="produto"><img src="imagens/d6.png"><h3>Produto 4</h3><p>Descrição do produto</p><p><strong>R$ 60,00</strong></p></div>
-          <div class="produto"><img src="imagens/p1.jpg"><h3>Produto 4</h3><p>Descrição do produto</p><p><strong>R$ 60,00</strong></p></div>
+          <div class="produto"><img src="imagens/d1.jpg"><h3>Pijama de Verão Feminino</h3><p></p><p><strong>R$ 59,90</strong></p></div>
+          <div class="produto"><img src="imagens/d2.jpg"><h3>Pijama de Verão Feminino</h3><p></p><p><strong>R$ 59,90</strong></p></div>
+          <div class="produto"><img src="imagens/d3.png"><h3>Pijama de Verão Feminino</h3><p></p><p><strong>R$ 59,90</strong></p></div>
+          <div class="produto"><img src="imagens/d4.png"><h3>Pijama de Verão Feminino</h3><p></p><p><strong>R$ 59,90</strong></p></div>
+          <div class="produto"><img src="imagens/d5.jpg"><h3>Pijama de Verão Feminino</h3><p></p><p><strong>R$ 59,90</strong></p></div>
+          <div class="produto"><img src="imagens/d6.png"><h3>Pijama de Verão Feminino</h3><p></p><p><strong>R$ 59,90</strong></p></div>
+          <div class="produto"><img src="imagens/p1.png"><h3>Pijama de Verão Feminino</h3><p></p><p><strong>R$ 59,90</strong></p></div>
         </div>
         <button class="arrow right" onclick="scrollCarrossel('carrossel1', 1)">&#8250;</button>
       </div>
 
       <div class="titulo-meio">
-        <h2>Pijamas Masculinos</h2>
+        <h2>Pijamas de inverno</h2>
       </div>
 
       <!-- Carrossel 2 -->
       <div class="carrossel-pro2">
         <button class="arrow left" onclick="scrollCarrossel('carrossel2', -1)">&#8249;</button>
         <div class="carrossel" id="carrossel2">
-          <div class="produto"><img src="imagens/p2.jpg"><h3>Produto 1</h3><p>Descrição do produto</p><p><strong>R$ 49,90</strong></p></div>
-          <div class="produto"><img src="imagens/p3.jpg"><h3>Produto 2</h3><p>Descrição do produto</p><p><strong>R$ 54,90</strong></p></div>
-          <div class="produto"><img src="imagens/p4.jpg"><h3>Produto 3</h3><p>Descrição do produto</p><p><strong>R$ 59,90</strong></p></div>
+          <div class="produto"><img src="imagens/p2.jpg"><h3>Pijama de Inverno Masculino</h3><p></p><p><strong>R$ 79,90</strong></p></div>
+          <div class="produto"><img src="imagens/p3.jpg"><h3>Pijama de Inverno Masculino</h3><p></p><p><strong>R$ 79,90</strong></p></div>
+          <div class="produto"><img src="imagens/p4.jpg"><h3>Pijama de Inverno Masculino</h3><p></p><p><strong>R$ 79,90</strong></p></div>
+          <div class="produto"><img src="imagens/p5.jpg"><h3>Pijama de Inverno Feminino</h3><p></p><p><strong>R$ 79,90</strong></p></div>
         </div>
         <button class="arrow right" onclick="scrollCarrossel('carrossel2', 1)">&#8250;</button>
       </div>
