--- a/produto.html
+++ b/produto.html
@@ -76,18 +76,26 @@
   <div class="footer-left">
     <div class="site-name">NK pijamas</div>
     <div class="social-icons">
-      <a href="#"><img src="../Catalogo/imagens/zap.jpg" alt="icon" /></a>
-      <a href="#"><img src="../Catalogo/imagens/insta.webp" alt="icon" /></a>
+      <a href="#"><img src="imagens/zap.jpg" alt="icon" /></a>
+      <a href="#"><img src="imagens/insta.webp" alt="icon" /></a>
     </div>
   </div>
   <div class="footer-right">
     <nav>
-      <a href="../home/Inicio.html">Início</a>
-      <a href="../Catalogo/Catalogo.html">Catálogo</a>
+      <a href="#">Início</a>
+      <a href="#">Catálogo</a>
       <a href="#">Sobre</a>
     </nav>
   </div>
+ <div class="footer-bottom">
+    <p>
+      NIKA Pijamas | CNPJ: <br>
+      Rua  - Maringá/PR - CEP: 89112-460<br>
+      © Direitos Reservados — <a href="https://www.nikapijamas.com.br">Home.html</a>
+    </p>
+  </div>
 </footer>
+
 
 <script src="script.js"></script>
 </body>
