--- a/produto.html
+++ b/produto.html
@@ -9,20 +9,14 @@
 <body>
 
 <header>
- <div class="header-inner">
-  <div class="logo">  
-    <img src="../Catalogo/imagens/logo.png" alt="Logo">
- </div>
-    <nav>
-<<<<<<< HEAD
-      <a href="../home/Inicio.html">Início</a>
-      <a href="../Catalogo/Catalogo.html">Catálogo</a>
-      <a href="#">Sobre</a>
-=======
+  <div class="header-inner">
+    <div class="logo">
+      <a href="Home.html"><img src="imagens/logo.png" alt="Logo"></a>
+    </div>
+    <nav class="menu">
       <a href="Home.html">Início</a>
       <a href="Catalogo.html">Catálogo</a>
       <a href="sobre.html">Sobre</a>
->>>>>>> 77dbd90f5c70a90be5f98a718ccf2e3e89fbe332
     </nav>
   </div>
 </header>
@@ -30,81 +24,35 @@
 <main>
   <section class="produto-detalhe">
     <div class="galeria-container">
-      <div class="thumbnails">
-        <img src="../Catalogo/imagens/d1.jpg" alt="Thumbnail 1" class="thumb-item active" onclick="mudarImagem(this)">
-        <img src="../Catalogo/imagens/d2.jpg" alt="Thumbnail 2" class="thumb-item" onclick="mudarImagem(this)">
-        <img src="../Catalogo/imagens/d3.png" alt="Thumbnail 3" class="thumb-item" onclick="mudarImagem(this)">
-      </div>
+      <div class="thumbnails" id="thumbnails-container">
+        </div>
       <div class="main-image">
-        <img src="../Catalogo/imagens/d1.jpg" alt="Imagem Principal do Produto" id="imagemPrincipal">
+        <img src="" alt="Imagem Principal do Produto" id="imagemPrincipal">
       </div>
     </div>
 
     <div class="info-container">
-      <h1>Pijama Masculino Básico</h1>
-      <p class="descricao">
-        Conforto e estilo para suas noites. Feito com material de alta qualidade para garantir o melhor descanso.
-      </p>
-      <ul class="detalhes-tecnicos">
-        <li>- Poliéster com toque de algodão</li>
-        <li>- Disponível nos tamanhos P, M, G e GG</li>
-        <li>- Tamanhos personalizados sob medida (consulte)</li>
-      </ul>
-      <p class="preco"><strong>R$ 54,90</strong></p>
-      <div class="whatsapp-group">
-        <span>Peça o seu agora mesmo!</span>
-        <a class="whatsapp-button" href="https://wa.me/5599999999999" target="_blank">
-          <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp">
-          Pedir no Whatsapp
-        </a>
-      </div>
+      <h1 id="product-name">Carregando...</h1>
+      <ul id="product-details" class="detalhes-tecnicos">
+          </ul>
+      <a id="whatsapp-link" class="whatsapp-button" href="#" target="_blank">
+        Whatsapp
+      </a>
     </div>
   </section>
 
-  <section class="destaques">
-    <div class="titulo-destaques">
-      <h2>Destaques</h2>
-    </div>
-    <div class="carrossel-container">
-      <button class="arrow left" onclick="scrollCarrossel('carrosselDestaques', -1)">&#8249;</button>
-      <div class="carrossel" id="carrosselDestaques">
-        <div class="produto"><img src="../Catalogo/imagens/d4.png"><h3>Produto Destaque 1</h3><p>Descrição do produto</p><p><strong>R$ 59,90</strong></p></div>
-        <div class="produto"><img src="../Catalogo/imagens/d5.jpg"><h3>Produto Destaque 2</h3><p>Descrição do produto</p><p><strong>R$ 60,00</strong></p></div>
-        <div class="produto"><img src="../Catalogo/imagens/d6.png"><h3>Produto Destaque 3</h3><p>Descrição do produto</p><p><strong>R$ 49,90</strong></p></div>
-        <div class="produto"><img src="../Catalogo/imagens/d1.jpg"><h3>Produto Destaque 4</h3><p>Descrição do produto</p><p><strong>R$ 54,90</strong></p></div>
-      </div>
-      <button class="arrow right" onclick="scrollCarrossel('carrosselDestaques', 1)">&#8250;</button>
-    </div>
-  </section>
-</main>
+  </main>
 
 <footer class="footer">
   <div class="footer-left">
     <div class="site-name">NK pijamas</div>
     <div class="social-icons">
-<<<<<<< HEAD
-      <a href="#"><img src="../Catalogo/imagens/zap.jpg" alt="icon" /></a>
-      <a href="#"><img src="../Catalogo/imagens/insta.webp" alt="icon" /></a>
-=======
       <a href="#"><img src="imagens/zap.jpg" alt="icon" /></a>
       <a href="#"><img src="imagens/insta.webp" alt="icon" /></a>
->>>>>>> 77dbd90f5c70a90be5f98a718ccf2e3e89fbe332
     </div>
   </div>
   <div class="footer-right">
     <nav>
-<<<<<<< HEAD
-      <a href="../home/Inicio.html">Início</a>
-      <a href="../Catalogo/Catalogo.html">Catálogo</a>
-      <a href="#">Sobre</a>
-    </nav>
-  </div>
-</footer>
-
-<script src="script.js"></script>
-</body>
-</html>
-=======
       <a href="#">Início</a>
       <a href="#">Catálogo</a>
       <a href="#">Sobre</a>
@@ -120,7 +68,7 @@
 </footer>
 
 
-<script src="script.js"></script>
+<script src="database.js"></script> <script src="produto.js"></script>
+
 </body>
 </html>
->>>>>>> 77dbd90f5c70a90be5f98a718ccf2e3e89fbe332
