Catalogo e home js

--- a/Catalogo.html
+++ b/Catalogo.html
@@ -20,53 +20,95 @@
   </div>
 </header>
 
-
-  <main>
-    <section class="catalogo">
-      <div class="titulo">
-        <h2>Pijamas de Verão</h2>
+<main>
+  <section class="catalogo">
+    <div class="titulo">
+      <h2>Pijamas de Verão</h2>
       <div class="whatsapp-group">
         <span>Peça do seu jeito</span>
-          <a class="whatsapp-button" href="https://wa.me/5599999999999?text=Olá,%20 boa%20tarde!%20Gostaria%20de%20encomendar%20um%20pijama" target="_blank">
+        <a class="whatsapp-button" href="https://wa.me/5599999999999?text=Olá,%20 boa%20tarde!%20Gostaria%20de%20encomendar%20um%20pijama" target="_blank">
           <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp">
-      Whatsapp
-    </a>
-  </div>
-</div>
+          Whatsapp
+        </a>
+      </div>
+    </div>
 
-
-      <!-- Carrossel 1 -->
-      <div class="carrossel-pro2">
-        <button class="arrow left" onclick="scrollCarrossel('carrossel1', -1)">&#8249;</button>
-        <div class="carrossel" id="carrossel1">
-          <div class="produto"><img src="imagens/d1.jpg"><h3>Pijama de Verão Feminino</h3><p></p><p><strong>R$ 59,90</strong></p></div>
-          <div class="produto"><img src="imagens/d2.jpg"><h3>Pijama de Verão Feminino</h3><p></p><p><strong>R$ 59,90</strong></p></div>
-          <div class="produto"><img src="imagens/d3.png"><h3>Pijama de Verão Feminino</h3><p></p><p><strong>R$ 59,90</strong></p></div>
-          <div class="produto"><img src="imagens/d4.png"><h3>Pijama de Verão Feminino</h3><p></p><p><strong>R$ 59,90</strong></p></div>
-          <div class="produto"><img src="imagens/d5.jpg"><h3>Pijama de Verão Feminino</h3><p></p><p><strong>R$ 59,90</strong></p></div>
-          <div class="produto"><img src="imagens/d6.png"><h3>Pijama de Verão Feminino</h3><p></p><p><strong>R$ 59,90</strong></p></div>
-          <div class="produto"><img src="imagens/p1.png"><h3>Pijama de Verão Feminino</h3><p></p><p><strong>R$ 59,90</strong></p></div>
+    <!-- Carrossel 1 -->
+    <div class="carrossel-pro2">
+      <button class="arrow left" onclick="scrollCarrossel('carrossel1', -1)">&#8249;</button>
+      <div class="carrossel" id="carrossel1">
+        <div class="produto" onclick="window.location.href='produto.html?id=pijama-verao-feminino-1'">
+          <img src="imagens/d1.jpg">
+          <h3>Pijama de Verão Feminino Miney</h3>
+          <p><strong>R$ 59,90</strong></p>
         </div>
-        <button class="arrow right" onclick="scrollCarrossel('carrossel1', 1)">&#8250;</button>
-      </div>
-
-      <div class="titulo-meio">
-        <h2>Pijamas de inverno</h2>
-      </div>
-
-      <!-- Carrossel 2 -->
-      <div class="carrossel-pro2">
-        <button class="arrow left" onclick="scrollCarrossel('carrossel2', -1)">&#8249;</button>
-        <div class="carrossel" id="carrossel2">
-          <div class="produto"><img src="imagens/p2.jpg"><h3>Pijama de Inverno Masculino</h3><p></p><p><strong>R$ 79,90</strong></p></div>
-          <div class="produto"><img src="imagens/p3.jpg"><h3>Pijama de Inverno Masculino</h3><p></p><p><strong>R$ 79,90</strong></p></div>
-          <div class="produto"><img src="imagens/p4.jpg"><h3>Pijama de Inverno Masculino</h3><p></p><p><strong>R$ 79,90</strong></p></div>
-          <div class="produto"><img src="imagens/p5.jpg"><h3>Pijama de Inverno Feminino</h3><p></p><p><strong>R$ 79,90</strong></p></div>
+        <div class="produto" onclick="window.location.href='produto.html?id=pijama-verao-feminino-2'">
+          <img src="imagens/d2.jpg">
+          <h3>Pijama de Verão Feminino de Bolinhas</h3>
+          <p><strong>R$ 59,90</strong></p>
         </div>
-        <button class="arrow right" onclick="scrollCarrossel('carrossel2', 1)">&#8250;</button>
+        <div class="produto" onclick="window.location.href='produto.html?id=pijama-verao-feminino-3'">
+          <img src="imagens/d3.png">
+          <h3>Pijama de Verão Feminino Cuelinho</h3>
+          <p><strong>R$ 59,90</strong></p>
+        </div>
+        <div class="produto" onclick="window.location.href='produto.html?id=pijama-verao-feminino-4'">
+          <img src="imagens/d4.png">
+          <h3>Pijama de Verão Feminino</h3>
+          <p><strong>R$ 59,90</strong></p>
+        </div>
+        <div class="produto" onclick="window.location.href='produto.html?id=pijama-verao-feminino-5'">
+          <img src="imagens/d5.jpg">
+          <h3>Pijama de Verão Feminino</h3>
+          <p><strong>R$ 59,90</strong></p>
+        </div>
+        <div class="produto" onclick="window.location.href='produto.html?id=pijama-verao-feminino-6'">
+          <img src="imagens/d6.png">
+          <h3>Pijama de Verão Feminino Sorvete</h3>
+          <p><strong>R$ 59,90</strong></p>
+        </div>
+        <div class="produto" onclick="window.location.href='produto.html?id=pijama-verao-feminino-7'">
+          <img src="imagens/p1.png">
+          <h3>Pijama de Verão Feminino</h3>
+          <p><strong>R$ 59,90</strong></p>
+        </div>
       </div>
-    </section>
-  </main>
+      <button class="arrow right" onclick="scrollCarrossel('carrossel1', 1)">&#8250;</button>
+    </div>
+
+    <div class="titulo-meio">
+      <h2>Pijamas de inverno</h2>
+    </div>
+
+    <!-- Carrossel 2 -->
+    <div class="carrossel-pro2">
+      <button class="arrow left" onclick="scrollCarrossel('carrossel2', -1)">&#8249;</button>
+      <div class="carrossel" id="carrossel2">
+        <div class="produto" onclick="window.location.href='produto.html?id=pijama-inverno-masculino-2'">
+          <img src="imagens/p2.jpg">
+          <h3>Pijama de Inverno Masculino</h3>
+          <p><strong>R$ 79,90</strong></p>
+        </div>
+        <div class="produto" onclick="window.location.href='produto.html?id=pijama-inverno-feminino-1'">
+          <img src="imagens/p3.jpg">
+          <h3>Pijama de Inverno Feminino</h3>
+          <p><strong>R$ 79,90</strong></p>
+        </div>
+        <div class="produto" onclick="window.location.href='produto.html?id=pijama-inverno-masculino-1'">
+          <img src="imagens/p4.jpg">
+          <h3>Pijama de Inverno Masculino Listrado</h3>
+          <p><strong>R$ 79,90</strong></p>
+        </div>
+        <div class="produto" onclick="window.location.href='produto.html?id=pijama-inverno-feminino-2'">
+          <img src="imagens/p5.jpg">
+          <h3>Pijama de Inverno Feminino Rosa</h3>
+          <p><strong>R$ 79,90</strong></p>
+        </div>
+      </div>
+      <button class="arrow right" onclick="scrollCarrossel('carrossel2', 1)">&#8250;</button>
+    </div>
+  </section>
+</main>
 
 <footer class="footer">
   <div class="footer-left">
@@ -92,7 +134,4 @@
   </div>
 </footer>
 
-
-  <script src="Catalogo.js"></script>
-</body>
-</html>
+<script src="Catalogo.js"></script>
