Atualizando as imagens do Home

--- a/Home.html
+++ b/Home.html
@@ -67,7 +67,7 @@
       </div>
     </section>
 
-    <!-- Promoções - carrossel 3 por vez -->
+    <!-- Promoções -->
     <div class="carrossel-pro2">
       <h2>Promoções</h2>
       <button class="arrow left" onclick="scrollCarrossel('carrossel1', -1)">&#8249;</button>
@@ -103,10 +103,10 @@
     <!-- Destaques -->
     <h2>Combos Familia</h2>
     <div class="destaques">
-      <div class="d1">
+      <div class="Produto-combo">
         <img src="imagens/pose 1.png" alt="Pijama mãe e filha">
       </div>
-      <div class="d1">
+      <div class="Produto-Combo">
         <img src="imagens/pose 2.png" alt="Pijama pai e filho">
       </div>
     </div>
@@ -162,9 +162,8 @@
 
       <div class="footer-bottom">
         <p>
-          NK Pijamas | CNPJ: <br>
-          Rua - Maringá/PR - CEP: 89112-460<br>
-          © Direitos Reservados — <a href="Home.html">Home</a>
+          © NK Pijamas 2025 - Todos os direitos reservados.<br>
+          Site desenvolvido por UNICV - EWS </a>
         </p>
       </div>
     </footer>
