--- a/Sobre.html
+++ b/Sobre.html
@@ -32,11 +32,14 @@
             </div>
             <div class="textsobre">
                 <h1>Sobre nós</h1>
-                <h3>Empresa feita para lhe dar conforto em seu momento de lazer</h3>
+                <h3>Feita para lhe dar conforto em seu momento de lazer</h3>
                 <p>
-                    Ouviram do Ipiranga às margens plácidas De um povo heroico o brado retumbante...
+                      Acreditamos que o conforto começa pelo que você veste para dormir.   
+                      Desde 2019, nossa missão é transformar o momento do descanso em uma experiência ainda mais especial, oferecendo pijamas que unem estilo, maciez e qualidade.
+
+Cada peça é pensada com carinho, desenvolvida com tecidos de toque suave, modelagens modernas e estampas encantadoras para todas as idades. Trabalhamos com linhas adulto, infantil e família, para que todos possam compartilhar momentos aconchegantes juntos.
                     <br><br>
-                    salve salve
+                    salve 
                 </p>
             </div>
         </div>
