--- a/produto.html
+++ b/produto.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Detalhes do Produto</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="produto.css">
 </head>
 <body>
 
@@ -22,26 +23,52 @@
 </header>
 
 <main>
-  <section class="produto-detalhe">
-    <div class="galeria-container">
-      <div class="thumbnails" id="thumbnails-container">
-        </div>
-      <div class="main-image">
-        <img src="" alt="Imagem Principal do Produto" id="imagemPrincipal">
+  <section class="produto-container">
+    <!-- Nome do produto no topo -->
+    <div class="produto-header">
+      <h1 id="product-name">Carregando...</h1>
+      <div class="produto-preco">
+        <span id="product-price">R$ 0,00</span>
       </div>
     </div>
 
-    <div class="info-container">
-      <h1 id="product-name">Carregando...</h1>
-      <ul id="product-details" class="detalhes-tecnicos">
+    <!-- Container principal com imagens e informações -->
+    <div class="produto-content">
+      <!-- Galeria de imagens -->
+      <div class="galeria-section">
+        <div class="imagem-principal-container">
+          <img src="" alt="Imagem Principal do Produto" id="imagemPrincipal">
+        </div>
+        
+        <div class="thumbnails-grid" id="thumbnails-container">
+          <!-- Thumbnails serão inseridas via JavaScript -->
+        </div>
+      </div>
+
+      <!-- Informações do produto -->
+      <div class="produto-info">
+        <div class="produto-descricao">
+          <h3>Descrição</h3>
+          <p id="product-description">Carregando descrição...</p>
+        </div>
+
+        <div class="produto-detalhes">
+          <h3>Detalhes</h3>
+          <ul id="product-details" class="detalhes-lista">
+            <!-- Detalhes serão inseridos via JavaScript -->
           </ul>
-      <a id="whatsapp-link" class="whatsapp-button" href="#" target="_blank">
-        Whatsapp
-      </a>
+        </div>
+
+        <div class="produto-acoes">
+          <a id="whatsapp-link" class="whatsapp-button" href="#" target="_blank">
+            <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp">
+            Encomendar via WhatsApp
+          </a>
+        </div>
+      </div>
     </div>
   </section>
-
-  </main>
+</main>
 
 <footer class="footer">
   <div class="footer-left">
@@ -53,22 +80,21 @@
   </div>
   <div class="footer-right">
     <nav>
-      <a href="#">Início</a>
-      <a href="#">Catálogo</a>
-      <a href="#">Sobre</a>
+      <a href="Home.html">Início</a>
+      <a href="Catalogo.html">Catálogo</a>
+      <a href="sobre.html">Sobre</a>
     </nav>
   </div>
- <div class="footer-bottom">
+  <div class="footer-bottom">
     <p>
       NIKA Pijamas | CNPJ: <br>
-      Rua  - Maringá/PR - CEP: 89112-460<br>
-      © Direitos Reservados — <a href="https://www.nikapijamas.com.br">Home.html</a>
+      Rua - Maringá/PR - CEP: 89112-460<br>
+      © Direitos Reservados — <a href="Home.html">Home</a>
     </p>
   </div>
 </footer>
 
-
-<script src="database.js"></script> <script src="produto.js"></script>
+<script src="produto.js"></script>
 
 </body>
 </html>
