--- a/Sobre.html
+++ b/Sobre.html
@@ -17,6 +17,8 @@
       <a href="Catalogo.html">Catálogo</a>
       <a href="sobre.html">Sobre</a>
     </nav>
+          <div class="menu-toggle" onclick="toggleMenu()">☰</div>
+    </div>
   </div>
         </nav>
     </header>
