--- a/produto.html
+++ b/produto.html
@@ -19,6 +19,8 @@
       <a href="Catalogo.html">Catálogo</a>
       <a href="sobre.html">Sobre</a>
     </nav>
+          <div class="menu-toggle" onclick="toggleMenu()">☰</div>
+    </div>
   </div>
 </header>
 
