--- a/Catalogo.html
+++ b/Catalogo.html
@@ -51,7 +51,7 @@
         </div>
         <div class="produto" onclick="window.location.href='produto.html?id=pijama-verao-feminino-3'">
           <img src="imagens/d3.png">
-          <h3>Pijama de Verão Feminino Cuelinho</h3>
+          <h3>Pijama de Verão Feminino Coelinho</h3>
           <p><strong>R$ 59,90</strong></p>
         </div>
         <div class="produto" onclick="window.location.href='produto.html?id=pijama-verao-feminino-4'">
