--- a/Home.html
+++ b/Home.html
@@ -72,27 +72,27 @@
       <div class="carrossel" id="carrossel1">
         <div class="produto" onclick="window.location.href='produto.html?id=pijama-verao-feminino-1'">
           <img src="imagens/d1.jpg">
-          <h3>Doce Sonho</h3>
+          <h3>Pijama de Verão Feminino Miney</h3>
         </div>
         <div class="produto" onclick="window.location.href='produto.html?id=pijama-verao-feminino-2'">
           <img src="imagens/d2.jpg">
-          <h3>Nuvem de Algodão</h3>
+          <h3>Pijama de Verão Feminino de Bolinhas</h3>
         </div>
         <div class="produto" onclick="window.location.href='produto.html?id=pijama-verao-feminino-3'">
           <img src="imagens/d3.png">
-          <h3>Encanto Floral</h3>
+          <h3>Pijama de Verão Feminino Coelinho</h3>
         </div>
         <div class="produto" onclick="window.location.href='produto.html?id=pijama-verao-feminino-4'">
           <img src="imagens/d4.png">
-          <h3>Café & Conforto</h3>
+          <h3>Pijama de Verão Feminino</h3>
         </div>
         <div class="produto" onclick="window.location.href='produto.html?id=pijama-verao-feminino-5'">
           <img src="imagens/d5.jpg">
-          <h3>Luar Rosé</h3>
+          <h3>Pijama de Verão Feminino</h3>
         </div>
         <div class="produto" onclick="window.location.href='produto.html?id=pijama-verao-feminino-6'">
           <img src="imagens/d6.png">
-          <h3>Estrela da Noite</h3>
+          <h3>Pijama de Verão Feminino Sorvete</h3>
         </div>
       </div>
       <button class="arrow right" onclick="scrollCarrossel('carrossel1', 1)">&#8250;</button>
