--- a/produto.html
+++ b/produto.html
@@ -72,29 +72,34 @@
   </section>
 </main>
 
-<footer class="footer">
-  <div class="footer-left">
-    <div class="site-name">NK pijamas</div>
-    <div class="social-icons">
-      <a href="#"><img src="imagens/zap.jpg" alt="icon" /></a>
-      <a href="#"><img src="imagens/insta.webp" alt="icon" /></a>
-    </div>
-  </div>
-  <div class="footer-right">
-    <nav>
-      <a href="Home.html">Início</a>
-      <a href="Catalogo.html">Catálogo</a>
-      <a href="sobre.html">Sobre</a>
-    </nav>
-  </div>
-  <div class="footer-bottom">
-    <p>
-      NIKA Pijamas | CNPJ: <br>
-      Rua - Maringá/PR - CEP: 89112-460<br>
-      © Direitos Reservados — <a href="Home.html">Home</a>
-    </p>
-  </div>
-</footer>
+    <footer class="footer-home">
+      <div class="footer-left">
+        <div class="site-name">NK Pijamas</div>
+        <div class="social-icons">
+          <a href="https://wa.me/5599999999999" target="_blank">
+            <img src="imagens/zap.jpg" alt="WhatsApp">
+          </a>
+          <a href="https://www.instagram.com/moda_feminina_nk?igsh=bzZuNDJxaDVzYm5r" target="_blank">
+            <img src="imagens/insta.webp" alt="Instagram">
+          </a>
+        </div>
+      </div>
+
+      <div class="footer-right">
+        <nav class="menu">
+          <a href="Home.html">Início</a>
+          <a href="Catalogo.html">Catálogo</a>
+          <a href="sobre.html">Sobre</a>
+        </nav>
+      </div>
+
+      <div class="footer-bottom">
+        <p>
+          © NK Pijamas 2025 - Todos os direitos reservados.<br>
+          Site desenvolvido por UNICV - EWS </a>
+        </p>
+      </div>
+    </footer>
 
 <script src="produto.js"></script>
 
