--- a/Sobre.html
+++ b/Sobre.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nk pijamas</title>
+    <title>Sobre Nós</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -17,8 +17,6 @@
       <a href="Catalogo.html">Catálogo</a>
       <a href="sobre.html">Sobre</a>
     </nav>
-          <div class="menu-toggle" onclick="toggleMenu()">☰</div>
-    </div>
   </div>
         </nav>
     </header>
@@ -38,10 +36,11 @@
                 <p>
                       Acreditamos que o conforto começa pelo que você veste para dormir.   
                       Desde 2019, nossa missão é transformar o momento do descanso em uma experiência ainda mais especial, oferecendo pijamas que unem estilo, maciez e qualidade.
+                      Cada peça é pensada com carinho, desenvolvida com tecidos de toque suave, modelagens modernas e estampas encantadoras para todas as idades. Trabalhamos com linhas adulto, infantil e família, para que todos possam compartilhar momentos aconchegantes juntos.
 
-Cada peça é pensada com carinho, desenvolvida com tecidos de toque suave, modelagens modernas e estampas encantadoras para todas as idades. Trabalhamos com linhas adulto, infantil e família, para que todos possam compartilhar momentos aconchegantes juntos.
+                      Nosso compromisso vai além de vender roupas: queremos criar memórias afetivas, noites tranquilas e manhãs mais felizes. Valorizamos a produção local, o cuidado em cada costura e a satisfação dos nossos clientes.
                     <br><br>
-                    salve 
+                    
                 </p>
             </div>
         </div>
@@ -50,34 +49,30 @@ Cada peça é pensada com carinho, desenvolvida com tecidos de toque suave, mode
 
     <!-- Fundo -->
 
-    <footer class="footer-home">
-      <div class="footer-left">
-        <div class="site-name">NK Pijamas</div>
-        <div class="social-icons">
-          <a href="https://wa.me/5599999999999" target="_blank">
-            <img src="imagens/zap.jpg" alt="WhatsApp">
-          </a>
-          <a href="https://www.instagram.com/moda_feminina_nk?igsh=bzZuNDJxaDVzYm5r" target="_blank">
-            <img src="imagens/insta.webp" alt="Instagram">
-          </a>
-        </div>
-      </div>
+<footer class="footer">
+  <div class="footer-left">
+    <div class="site-name">NK pijamas</div>
+    <div class="social-icons">
+      <a href="#"><img src="imagens/zap.jpg" alt="icon" /></a>
+      <a href="#"><img src="imagens/insta.webp" alt="icon" /></a>
+    </div>
+  </div>
+  <div class="footer-right">
+    <nav>
+      <a href="#">Início</a>
+      <a href="#">Catálogo</a>
+      <a href="#">Sobre</a>
+    </nav>
+  </div>
+ <div class="footer-bottom">
+    <p>
+      NIKA Pijamas | CNPJ: <br>
+      Rua  - Maringá/PR - CEP: 89112-460<br>
+      © Direitos Reservados — <a href="https://www.nikapijamas.com.br">Home.html</a>
+    </p>
+  </div>
+</footer>
 
-      <div class="footer-right">
-        <nav class="menu">
-          <a href="Home.html">Início</a>
-          <a href="Catalogo.html">Catálogo</a>
-          <a href="sobre.html">Sobre</a>
-        </nav>
-      </div>
-
-      <div class="footer-bottom">
-        <p>
-          © NK Pijamas 2025 - Todos os direitos reservados.<br>
-          Site desenvolvido por UNICV - EWS </a>
-        </p>
-      </div>
-    </footer>
 
   <script src="Catalogo.js"></script>
 </body>
