--- a/Catalogo.html
+++ b/Catalogo.html
@@ -7,20 +7,23 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<header>
- <div class="header-inner">
-  <div class="logo">  
-    <img src="imagens/logo.png" alt="Logo">
- </div>
-    <nav class="menu">
-      <a href="Home.html">Início</a>
-      <a href="Catalogo.html">Catálogo</a>
-      <a href="sobre.html">Sobre</a>
-    </nav>
-          <div class="menu-toggle" onclick="toggleMenu()">☰</div>
+  <header>
+    <div class="header-inner">
+      <div class="logo">
+        <a href="Home.html">
+          <img src="imagens/logo.png" alt="Logo">
+        </a>
+      </div>
+
+      <nav class="menu">
+        <a href="Home.html">Início</a>
+        <a href="Catalogo.html">Catálogo</a>
+        <a href="sobre.html">Sobre</a>
+      </nav>
+
+      <div class="menu-toggle" onclick="toggleMenu()">☰</div>
     </div>
-  </div>
-</header>
+  </header>
 
 <main>
   <section class="catalogo">
@@ -116,7 +119,7 @@
       <div class="footer-left">
         <div class="site-name">NK Pijamas</div>
         <div class="social-icons">
-          <a href="https://wa.me/5599999999999" target="_blank">
+          <a href="https://wa.me/5544999557818" target="_blank">
             <img src="imagens/zap.jpg" alt="WhatsApp">
           </a>
           <a href="https://www.instagram.com/moda_feminina_nk?igsh=bzZuNDJxaDVzYm5r" target="_blank">
