--- a/Sobre.html
+++ b/Sobre.html
@@ -7,21 +7,23 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-       <div class="header-inner">
-  <div class="logo">  
-    <img src="imagens/logo.png" alt="Logo">
- </div>
-    <nav class="menu">
-      <a href="Home.html">Início</a>
-      <a href="Catalogo.html">Catálogo</a>
-      <a href="sobre.html">Sobre</a>
-    </nav>
-          <div class="menu-toggle" onclick="toggleMenu()">☰</div>
+  <header>
+    <div class="header-inner">
+      <div class="logo">
+        <a href="Home.html">
+          <img src="imagens/logo.png" alt="Logo">
+        </a>
+      </div>
+
+      <nav class="menu">
+        <a href="Home.html">Início</a>
+        <a href="Catalogo.html">Catálogo</a>
+        <a href="sobre.html">Sobre</a>
+      </nav>
+
+      <div class="menu-toggle" onclick="toggleMenu()">☰</div>
     </div>
-  </div>
-        </nav>
-    </header>
+  </header>
 <!-- topo -->
 
 
@@ -38,10 +40,11 @@
                 <p>
                       Acreditamos que o conforto começa pelo que você veste para dormir.   
                       Desde 2019, nossa missão é transformar o momento do descanso em uma experiência ainda mais especial, oferecendo pijamas que unem estilo, maciez e qualidade.
+                      Cada peça é pensada com carinho, desenvolvida com tecidos de toque suave, modelagens modernas e estampas encantadoras para todas as idades. Trabalhamos com linhas adulto, infantil e família, para que todos possam compartilhar momentos aconchegantes juntos.
 
-Cada peça é pensada com carinho, desenvolvida com tecidos de toque suave, modelagens modernas e estampas encantadoras para todas as idades. Trabalhamos com linhas adulto, infantil e família, para que todos possam compartilhar momentos aconchegantes juntos.
+                      Nosso compromisso vai além de vender roupas: queremos criar memórias afetivas, noites tranquilas e manhãs mais felizes. Valorizamos a produção local, o cuidado em cada costura e a satisfação dos nossos clientes.
                     <br><br>
-                    salve 
+                    
                 </p>
             </div>
         </div>
@@ -54,7 +57,7 @@ Cada peça é pensada com carinho, desenvolvida com tecidos de toque suave, mode
       <div class="footer-left">
         <div class="site-name">NK Pijamas</div>
         <div class="social-icons">
-          <a href="https://wa.me/5599999999999" target="_blank">
+          <a href="https://wa.me/5544999557818" target="_blank">
             <img src="imagens/zap.jpg" alt="WhatsApp">
           </a>
           <a href="https://www.instagram.com/moda_feminina_nk?igsh=bzZuNDJxaDVzYm5r" target="_blank">
@@ -81,4 +84,3 @@ Cada peça é pensada com carinho, desenvolvida com tecidos de toque suave, mode
 
   <script src="Catalogo.js"></script>
 </body>
-
