--- a/Sobre.html
+++ b/Sobre.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sobre Nós</title>
+    <title>Nk pijamas</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -17,6 +17,8 @@
       <a href="Catalogo.html">Catálogo</a>
       <a href="sobre.html">Sobre</a>
     </nav>
+          <div class="menu-toggle" onclick="toggleMenu()">☰</div>
+    </div>
   </div>
         </nav>
     </header>
@@ -49,31 +51,34 @@
 
     <!-- Fundo -->
 
-<footer class="footer">
-  <div class="footer-left">
-    <div class="site-name">NK pijamas</div>
-    <div class="social-icons">
-      <a href="#"><img src="imagens/zap.jpg" alt="icon" /></a>
-      <a href="#"><img src="imagens/insta.webp" alt="icon" /></a>
-    </div>
-  </div>
-  <div class="footer-right">
-    <nav>
-      <a href="#">Início</a>
-      <a href="#">Catálogo</a>
-      <a href="#">Sobre</a>
-    </nav>
-  </div>
- <div class="footer-bottom">
-    <p>
-      NIKA Pijamas | CNPJ: <br>
-      Rua  - Maringá/PR - CEP: 89112-460<br>
-      © Direitos Reservados — <a href="https://www.nikapijamas.com.br">Home.html</a>
-    </p>
-  </div>
-</footer>
+    <footer class="footer-home">
+      <div class="footer-left">
+        <div class="site-name">NK Pijamas</div>
+        <div class="social-icons">
+          <a href="https://wa.me/5544991644270" target="_blank">
+            <img src="imagens/zap.jpg" alt="WhatsApp">
+          </a>
+          <a href="https://www.instagram.com/moda_feminina_nk?igsh=bzZuNDJxaDVzYm5r" target="_blank">
+            <img src="imagens/insta.webp" alt="Instagram">
+          </a>
+        </div>
+      </div>
 
+      <div class="footer-right">
+        <nav class="menu">
+          <a href="Home.html">Início</a>
+          <a href="Catalogo.html">Catálogo</a>
+          <a href="sobre.html">Sobre</a>
+        </nav>
+      </div>
+
+      <div class="footer-bottom">
+        <p>
+          © NK Pijamas 2025 - Todos os direitos reservados.<br>
+          Site desenvolvido por UNICV - EWS </a>
+        </p>
+      </div>
+    </footer>
 
   <script src="Catalogo.js"></script>
 </body>
-
