--- a/Catalogo.html
+++ b/Catalogo.html
@@ -13,7 +13,7 @@
     <img src="imagens/logo.png" alt="Logo">
  </div>
     <nav class="menu">
-      <a href="Home.html">Início</a>
+      <a href="index.html">Início</a>
       <a href="Catalogo.html">Catálogo</a>
       <a href="sobre.html">Sobre</a>
     </nav>
@@ -127,7 +127,7 @@
 
       <div class="footer-right">
         <nav class="menu">
-          <a href="Home.html">Início</a>
+          <a href="index.html">Início</a>
           <a href="Catalogo.html">Catálogo</a>
           <a href="sobre.html">Sobre</a>
         </nav>
