--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
   <header>
     <div class="header-inner">
       <div class="logo">
-        <a href="Home.html">
+        <a href="index.html">
           <img src="imagens/logo.png" alt="Logo">
         </a>
       </div>
 
       <nav class="menu">
-        <a href="Home.html">Início</a>
+        <a href="index.html">Início</a>
         <a href="Catalogo.html">Catálogo</a>
         <a href="sobre.html">Sobre</a>
       </nav>
@@ -152,7 +152,7 @@
 
       <div class="footer-right">
         <nav class="menu">
-          <a href="Home.html">Início</a>
+          <a href="index.html">Início</a>
           <a href="Catalogo.html">Catálogo</a>
           <a href="sobre.html">Sobre</a>
         </nav>
