--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <nav class="menu">
         <a href="index.html">Início</a>
         <a href="Catalogo.html">Catálogo</a>
-        <a href="sobre.html">Sobre</a>
+        <a href="Sobre.html">Sobre</a>
       </nav>
 
       <div class="menu-toggle" onclick="toggleMenu()">☰</div>
