--- a/Catalogo.html
+++ b/Catalogo.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Nk pijamas</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="imagens/logo.png" type="image/png">
 </head>
 <body>
   <header>
