--- a/produto.html
+++ b/produto.html
@@ -6,6 +6,7 @@
   <title>Nk pijamas</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="produto.css">
+  <link rel="icon" href="imagens/logo.png" type="image/png">
 </head>
 <body>
 
