--- a/Catalogo.html
+++ b/Catalogo.html
@@ -82,8 +82,9 @@
       <button class="arrow right" onclick="scrollCarrossel('carrossel1', 1)">&#8250;</button>
     </div>
 
-    <div class="titulo-meio">
-      <h2>Pijamas de inverno</h2>
+  <div class="catalogo"> <div class="titulo">
+            <h2>Pijamas de Inverno</h2>
+            </div>
     </div>
 
     <!-- Carrossel 2 -->
