--- a/Catalogo.html
+++ b/Catalogo.html
@@ -32,7 +32,7 @@
       <h2>Pijamas de Verão</h2>
       <div class="whatsapp-group">
         <span>Peça do seu jeito</span>
-        <a class="whatsapp-button" href="https://wa.me/5544991644270?text=Olá,%20 boa%20tarde!%20Gostaria%20de%20encomendar%20um%20pijama" target="_blank">
+        <a class="whatsapp-button" href="https://wa.me/5544991644270?text=Olá,%20 tudo%20bem?%20Gostaria%20de%20encomendar%20um%20pijama" target="_blank">
           <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp">
           Whatsapp
         </a>
